[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = { version = "0.32.0-rc.8", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.104"
color-eyre = "0.6.2"

[profile.release-with-debug]
inherits = "release"
debug = "full"